# viwebserver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codecoverage.bat  codecoverage.sh
cmake/: gnu-aarch64-none-linux-gcc.cmake  gnu-arm-none-eabi-gcc.cmake  i686-w64-mingw32-gcc.cmake  x86_64-w64-mingw32-gcc.cmake
core/: CMakeLists.txt
core/src/: vihtmlformatter.cpp  vihtmlinput.cpp  vihtmllabel.cpp  vihtmllink.cpp  viwebserver.cpp
core/src/inc/: vihtmlbase.hpp  vihtmlformatter.hpp  vihtmlinput.hpp  vihtmllabel.hpp  vihtmllink.hpp  viwebserver.hpp
tests/: tst_vihtmlinput.cpp  tst_vihtmllabel.cpp  tst_vihtmllink.cpp  tst_viwebserver.cpp
tests/main/: main.cpp
